	* Fields with mandatory commas (e.g. build-depends) may now have a
	  leading or a trailing comma (either one, not both) (#4953)
	* Added `virtual-module` field, to allow modules that are not built
	  but registered (#4875).
	* Use better defaulting for `build-type`; rename `PackageDescription`'s
	  `buildType` field to `buildTypeRaw` and introduce new `buildType`
	  function (#4958)
	* Added `HexFloatLiterals` to `KnownExtension`.
	* Cabal will no longer try to build an empty set of `inputModules`
	  (#4890).
	* `copyComponent` and `installIncludeFiles` will now look for
	  include headers in the build directory ('dist/build/...' by
	  default) as well (#4866).
	* Added 'cxx-options' and 'cxx-sources' buildinfo fields for
	  separate compilation of C++ source files (#3700).
	* Removed unused '--allow-newer'/'--allow-older' support from
	  'Setup configure' (#4527).
	* Change `FlagAssignment` to be an opaque `newtype`.
	* Change `rawSystemStdInOut` to use proper type to represent
	  binary and textual data; new 'Distribution.Utils.IOData' module;
	  removed obsolete 'startsWithBOM', 'fileHasBOM', 'fromUTF8',
	  and 'toUTF8' functions; add new `toUTF8BS`/`toUTF8LBS`
	  encoding functions. (#4666)
	* Added a 'cabal check' warning when the `.cabal` file name does
	  not match package name (#4592).
	* The 'ar' program now receives its arguments via a response file
	  ('@file').  Old behaviour can be restored with
	  '--disable-response-files' argument to 'configure' or
	  'install' (#4596).
	* Added '.Lens' modules, with optics for package description data
	  types. (#4701)
	* Support for building with Win32 version 2.6 (#4835).
	* Change `compilerExtensions` and `ghcOptExtensionMap` to contain
	  `Maybe Flag`s, since a supported extention can lack a flag (#4443)
	* Pretty-printing of .cabal files is slightly different due to
	  parser changes. For an example, see
	  https://mail.haskell.org/pipermail/cabal-devel/2017-December/010414.html.
	* TODO
