@@ -25,11 +25,6 @@ data BuildType
                 -- information used by later phases.
   | Make        -- ^ calls @Distribution.Make.defaultMain@
   | Custom      -- ^ uses user-supplied @Setup.hs@ or @Setup.lhs@ (default)
-  | UnknownBuildType String
-                -- ^ a package that uses an unknown build type cannot actually
-                --   be built. Doing it this way rather than just giving a
-                --   parse error means we get better error messages and allows
-                --   you to inspect the rest of the package description.
                 deriving (Generic, Show, Read, Eq, Typeable, Data)
 
 instance Binary BuildType
@@ -38,25 +33,24 @@ knownBuildTypes :: [BuildType]
 knownBuildTypes = [Simple, Configure, Make, Custom]
 
 instance Pretty BuildType where
-  pretty (UnknownBuildType other) = Disp.text other
-  pretty other                    = Disp.text (show other)
+  pretty = Disp.text . show
 
 instance Parsec BuildType where
   parsec = do
     name <- P.munch1 isAlphaNum
-    return $ case name of
-      "Simple"    -> Simple
-      "Configure" -> Configure
-      "Custom"    -> Custom
-      "Make"      -> Make
-      _           -> UnknownBuildType name
+    case name of
+      "Simple"    -> return Simple
+      "Configure" -> return Configure
+      "Custom"    -> return Custom
+      "Make"      -> return Make
+      _           -> fail ("unknown build-type: '" ++ name ++ "'")
 
 instance Text BuildType where
   parse = do
     name <- Parse.munch1 isAlphaNum
-    return $ case name of
-      "Simple"    -> Simple
-      "Configure" -> Configure
-      "Custom"    -> Custom
-      "Make"      -> Make
-      _           -> UnknownBuildType name
+    case name of
+      "Simple"    -> return Simple
+      "Configure" -> return Configure
+      "Custom"    -> return Custom
+      "Make"      -> return Make
+      _           -> fail ("unknown build-type: '" ++ name ++ "'")
